# DeepRobProject

./: .gitignore  README.md  unet_dome_film.py
kortex_description/: CMakeLists.txt  package.xml
kortex_description/arms/gen3/7dof/urdf/: gen3_macro.xacro
kortex_description/robots/: kortex_robot.xacro
kortex_examples/src/: demo.py
kortex_gazebo/launch/: spawn_kortex_robot.launch  start_gazebo.launch
kortex_gazebo/worlds/: gazebo.world
one-shot_IL/: CMakeLists.txt  package.xml
one-shot_IL/launch/: simulation.launch
one-shot_IL/script/: ArmController.py
one-shot_IL/worlds/: table.world
one_shot_imitation_learning/: CMakeLists.txt  package.xml  readme.md
one_shot_imitation_learning/launch/: simulation.launch
one_shot_imitation_learning/script/: ArmController.py  DomeReimplementation.py  DomeReimplementationRollout.py  demo.py  generate_dataset.py  test_dataset.py
one_shot_imitation_learning/script/network/: DomeReimplementation.py  UNetWithTilingAndFiLM.py  visual_servoing_networks.py
one_shot_imitation_learning/worlds/: table.world
ros_kortex/kortex_description/arms/gen3/7dof/urdf/: gen3_macro.xacro
ros_kortex/kortex_gazebo/scripts/: home_robot.py
